Remove German language, fix menu nowrap, update lang-dropdown styles

--- a/src/web-components/lang-dropdown/styles.css
+++ b/src/web-components/lang-dropdown/styles.css
@@ -106,7 +106,6 @@ lang-dropdown .lang-menu a:focus {
 
 @media (max-width: 992px) {
   lang-dropdown {
-    margin-top: 15px;
     align-self: center;
   }
 
